server: add a /version endpoint
