# server/internal/api/api.go
@@ -22,10 +22,25 @@ type HealthAPIRouter interface {
 	HealthCheck(http.ResponseWriter, *http.Request)
 }
 
+// SystemAPIRouter defines the required methods for binding the api requests to a responses for the SystemAPI
+// The SystemAPIRouter implementation should parse necessary information from the http request,
+// pass the data to a SystemAPIServicer to perform the required actions, then write the service results to the http response.
+type SystemAPIRouter interface {
+	GetVersion(http.ResponseWriter, *http.Request)
+}
+
 // HealthAPIServicer defines the api actions for the HealthAPI service
 // This interface intended to stay up to date with the openapi yaml used to generate it,
 // while the service implementation can be ignored with the .openapi-generator-ignore file
 // and updated with the logic required for the API.
 type HealthAPIServicer interface {
 	HealthCheck(context.Context) (ImplResponse, error)
+}
+
+// SystemAPIServicer defines the api actions for the SystemAPI service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can be ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type SystemAPIServicer interface {
+	GetVersion(context.Context) (ImplResponse, error)
 }
