# server/internal/api/api_system.go
@@ -1,0 +1,69 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * CHECK24 GenDev 7 API
+ *
+ * API for the 7th CHECK24 GenDev challenge providing product offerings from five different internet providers
+ *
+ * API version: dev
+ */
+
+package api
+
+import (
+	"net/http"
+	"strings"
+)
+
+// SystemAPIController binds http requests to an api service and writes the service results to the http response
+type SystemAPIController struct {
+	service      SystemAPIServicer
+	errorHandler ErrorHandler
+}
+
+// SystemAPIOption for how the controller is set up.
+type SystemAPIOption func(*SystemAPIController)
+
+// WithSystemAPIErrorHandler inject ErrorHandler into controller
+func WithSystemAPIErrorHandler(h ErrorHandler) SystemAPIOption {
+	return func(c *SystemAPIController) {
+		c.errorHandler = h
+	}
+}
+
+// NewSystemAPIController creates a default api controller
+func NewSystemAPIController(s SystemAPIServicer, opts ...SystemAPIOption) *SystemAPIController {
+	controller := &SystemAPIController{
+		service:      s,
+		errorHandler: DefaultErrorHandler,
+	}
+
+	for _, opt := range opts {
+		opt(controller)
+	}
+
+	return controller
+}
+
+// Routes returns all the api routes for the SystemAPIController
+func (c *SystemAPIController) Routes() Routes {
+	return Routes{
+		"GetVersion": Route{
+			strings.ToUpper("Get"),
+			"/version",
+			c.GetVersion,
+		},
+	}
+}
+
+// GetVersion - Version information endpoint
+func (c *SystemAPIController) GetVersion(w http.ResponseWriter, r *http.Request) {
+	result, err := c.service.GetVersion(r.Context())
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w, result.Headers)
+}
